# mlops-1

./: .gitignore
.github/workflows/: ml-package.yml  python-linting.yml
ml-package/: coverage.xml  pyproject.toml
ml-package/src/ml_package/: model.py
ml-package/tests/: test_model.py
python-linting/: .coveragerc  coverage.xml  pyproject.toml  requirements.txt
python-linting/src/: bandit_excluded.py  calculator.py  mypy_excluded.py
python-linting/test/: test_calculator.py  test_calculator_integration.py
